# Laminar

./: .gitignore  ARCHITECTURE.md  CONSTANTS.md  CONTRIBUTING.md  Cargo.toml  INVARIANTS.md  LICENSE  README.md  RFC-001.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  lib.rs
.github/workflows/: ci.yml
crates/laminar-cli/: Cargo.toml
crates/laminar-cli/src/: agent.rs  main.rs  mode.rs  operator.rs  output.rs
crates/laminar-cli/src/commands/: construct.rs  generate.rs  mod.rs  validate.rs
crates/laminar-core/: Cargo.toml
crates/laminar-core/src/: batch.rs  csv_parser.rs  error.rs  json_parser.rs  lib.rs  qr.rs  receipt.rs  types.rs  ur_encoder.rs  validation.rs  zip321.rs
crates/laminar-core/tests/: full_pipeline.rs
demo/: README.md  agent_test.sh  invalid.csv  payroll.csv  run_demo.sh
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  encryption.rs  lib.rs  main.rs  storage.rs
desktop/src/components/: ImportScreen.tsx  QrDisplayScreen.tsx  ReceiptScreen.tsx  ReviewScreen.tsx
desktop/src/hooks/: useBatch.ts  useEncryption.ts
desktop/src/lib/: types.ts  validation.ts  zatoshi.ts
desktop/src/stores/: batchStore.ts
docs/: AGENT_INTEGRATION.md  FIELD_MANUAL.md
docs/homebrew/: laminar.rb
laminar-cli/: Cargo.toml
laminar-cli/src/: main.rs
laminar-cli/tests/: agent_mode.rs
laminar-core/: Cargo.toml
laminar-core/src/: lib.rs  output.rs  parser.rs  types.rs  validation.rs
scripts/: json-output.sh  pipe-detection.sh  release-check.sh  release.sh  tty-detection.sh
test-vectors/: invalid-address.csv  invalid-amount.csv  invalid-memo.csv  mixed-networks.csv  precision-edge.csv  unicode-memo.csv  valid-large.csv  valid-simple.csv
