[workspace]
resolver = "2"
members = [
    "laminar-core",
    "laminar-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Darklight Labs <liam@darklightlabs.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darklightlabs/laminar"
keywords = ["zcash", "privacy", "cryptocurrency", "batch-payments"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[workspace.dependencies]
# Zcash ecosystem (pin to compatible versions)
# Note: Check https://github.com/zcash/librustzcash for latest compatible set
zcash_primitives = "0.19"
zcash_client_backend = "0.15"
zcash_address = "0.6"
zcash_protocol = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data handling
csv = "1.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# UR encoding
ur = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
