# CLI crate for Laminar tracer bullet: CSV to intent output.
[package]
name = "laminar-cli"
version = "0.0.1-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for Laminar batch transaction constructor"

[[bin]]
name = "laminar-cli"
path = "src/main.rs"

[dependencies]
laminar-core = { path = "../laminar-core" }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dual-mode output dependencies
is-terminal = "0.4"
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"
