# Core library crate for parsing, validation, and shared data types.
[package]
name = "laminar-core"
version = "0.0.1-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for Laminar batch transaction constructor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
