[package]
name = "laminar-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
laminar-core = { path = "../laminar-core" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
colored = "2"
serde_json = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
