[package]
name = "laminar-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
zcash_address = "=0.10.1"
zcash_primitives = "=0.26.4"
zcash_protocol = "=0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
ur = "0.4"
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
