[package]
name = "laminar-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Laminar desktop shell"
build = "build.rs"

[lib]
name = "laminar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
laminar-core = { path = "../../crates/laminar-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"
chrono = { version = "0.4", features = ["serde"] }

[workspace]
